--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
-    "react-bootstrap-editable": "^0.8.2",
     "react-bootstrap-typeahead": "^6.3.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
