--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap-typeahead": "^6.3.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2"
   },
